--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,9 +5,9 @@
 }
 
 header {
-    width: 100%;
-    position: absolute;
-    z-index: 100;
+  width: 100%;
+  position: absolute;
+  z-index: 100;
   .big-size-container {
     margin-top: 20px;
     height: 70px;
@@ -23,17 +23,72 @@ header {
       nav {
         text-align: center;
         ul {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          list-style: none;
+          position: relative;
           li {
             margin-left: 35px;
             a {
               font-size: 18px;
               color: #fff;
-              position: relative;
               z-index: 1;
+              &:hover {
+                color: #b4afaf;
+              }
+            }
+            .accesories-menu {
+              overflow: hidden;
+              position: absolute;
+              top: 34px;
+              background-color: rgb(252, 252, 252);
+              visibility: hidden;
+              transition: 0.2s all;
+              .menu {
+                font-family: "Franklin Gothic Medium", "Arial Narrow", Arial,
+                  sans-serif;
+                h5 {
+                  cursor: pointer;
+                }
+                .accesories_menu_ul {
+                  text-align: center;
+                  li {
+                    cursor: pointer;
+                    &:hover {
+                      color: gray;
+                    }
+                  }
+                }
+              }
+            }
+            .accesories-menu.active {
+              visibility: visible;
+            }
+            .drone-menu {
+              overflow: hidden;
+              position: absolute;
+              background-color: rgb(255, 255, 255);
+              top: 34px;
+              left: 50px;
+              visibility: hidden;
+              transition: 0.2s all;
+              .menu {
+                font-family: "Franklin Gothic Medium", "Arial Narrow", Arial,
+                  sans-serif;
+                h5 {
+                  cursor: pointer;
+                }
+                ul {
+                  li {
+                    padding: 2px;
+                    cursor: pointer;
+                    &:hover {
+                      color: gray;
+                    }
+                  }
+                }
+              }
+            }
+
+            .drone-menu.active {
+              visibility: visible;
             }
           }
         }
@@ -41,113 +96,311 @@ header {
       .icons {
         i {
           color: white;
-          font-size: 18px;
+          font-size: 26px;
           margin-left: 20px;
           transition: 0.5s;
+          cursor: pointer;
           &:hover {
             color: black;
             transition: 0.5s;
           }
         }
+        .count {
+          color: white;
+          width: 16px;
+          height: 16px;
+          text-align: center;
+          display: inline-block;
+          background-color: red;
+          border-radius: 50%;
+          position: relative;
+          right: 9px;
+          bottom: 10px;
+        }
+      }
+      .search_input_large {
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        top: 70%;
+        right: 5%;
+        transition: 0.3s all;
+        .icon_search {
+          position: absolute;
+          top: 0px;
+          right: 3px;
+        }
+      }
+      .search_input_large.active {
+        visibility: visible;
+        opacity: 1;
+      }
+      .user_registration {
+        right: 8%;
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        height: max-content;
+        background-color: rgb(255, 255, 255);
+        padding: 0px 30px;
+        transition: 0.3s all;
+        .language{
+          line-height: 0;
+          .image{
+              margin-bottom: 10px;
+          }
+        }
+      }
+      .user_registration.active{
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.mobile-container {
+  background-color: white;
+  .row {
+    .user-cart {
+      float: right;
+    }
+    .search_input {
+      overflow: hidden;
+      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      top: 30px;
+      left: 50px;
+      transition: 0.3s all;
+      .icon_search {
+        position: absolute;
+        top: 0px;
+        right: 3px;
+      }
+    }
+    .search_input.active {
+      visibility: visible;
+      opacity: 1;
+    }
+    .user_mobile_registration {
+      top: 2%;
+      right: 0;
+      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      height: max-content;
+      background-color: rgb(255, 255, 255);
+      padding: 0px 30px;
+      transition: 0.3s all;
+      .language{
+        line-height: 0;
+        .image{
+            margin-bottom: 10px;
+        }
+      }
+    }
+    .user_mobile_registration.active{
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+}
+
+#underwater {
+  .item {
+    position: relative;
+  }
+}
+
+.mobile-menu {
+  overflow: hidden;
+  position: relative;
+  top: -34px;
+  background-color: rgb(255, 255, 255);
+  width: 0px;
+  height: 100vh;
+  transition: 1s;
+  ul {
+    padding: 10px;
+    li {
+      padding: 10px;
+      a {
+        color: black;
+        i.active {
+          transform: rotate(180deg);
+        }
+      }
+    }
+    .acs-icon {
+      display: none;
+    }
+    .acs-icon.active {
+      display: block;
+    }
+    .drone-icon {
+      display: none;
+    }
+    .drone-icon.active {
+      display: block;
+    }
+  }
+}
+
+.mobile-menu.active {
+  position: relative;
+  width: 200px;
+  height: 100vh;
+  top: -34px;
+  background-color: rgb(255, 255, 255);
+  transition: 1s;
+}
+
+#underwater {
+  .item.slider_2 {
+    position: relative;
+    .sliderContent {
+      position: absolute;
+      top: 170px;
+      left: 6%;
+      color: #fff;
+      line-height: 30px;
+      .title {
+        font-size: 34px;
+        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+      }
+      h1 {
+        font-size: 60px;
+        margin-top: 30px;
+      }
+      .shopnow {
+        padding-left: 35px;
+        padding-right: 35px;
+        border-radius: 25px;
+        &:hover{
+          background-color: black;
+          color: white;
+        }
+      }
+    }
+  }
+  .item.slider_1 {
+    position: relative;
+    .sliderContent {
+      position: absolute;
+      top: 170px;
+      left: 50%;
+      color: #fff;
+      line-height: 30px;
+      .title {
+        font-size: 34px;
+        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+      }
+      h1 {
+        font-size: 66px;
+        margin-top: 30px;
+        font-family: Georgia, "Times New Roman", Times, serif;
+      }
+      .shopnow {
+        padding-left: 35px;
+        padding-right: 35px;
+        border-radius: 25px;
+        &:hover{
+          background-color: black;
+          color: white;
+        }
       }
     }
   }
 
-  .mobile-container{
-    .row{
-        .user-cart{
-            float: right;
+  @media screen and (min-width: 391px) and (max-width: 821px) {
+    .item.slider_1 {
+      .sliderContent {
+        top: 50px;
+        .title {
+          font-size: 22px;
         }
-       
+        h1 {
+          font-size: 26px;
+          margin-top: 20px;
+        }
+        .shopnow {
+          padding-left: 15px;
+          padding-right: 15px;
+        }
+        .text {
+          font-size: 14px;
+        }
+      }
     }
-
-    
   }
-  .menusss{
-    overflow: hidden;
-    position: relative;
-    top: -34px;
-    background-color: red;
-    width: 0px;
-    height: 200px;
-    transition: 1s;
-}
-.menusss.active{
-    
-    position: relative;
-    width: 200px;
-    height: 200px;
-    top: -34px;
-    background-color: red;
-    transition: 1s;
-}
-
-.drone-menu{
-    position: absolute;
-    left: 500px;
-    top: 83px;
-    background-color: red;
-    width: 200px;
-    height: 0px;
-    transition: 1s;
-}
-.drone-menu.active{
-    position: absolute;
-    left: 500px;
-    top: 83px;
-    width: 200px;
-    height: 200px;
-    background-color: red;
-    transition: 1s;
-}
-.accesories-menu{
-    position: absolute;
-    left: 620px;
-    top: 83px;
-    background-color: red;
-    width: 200px;
-    height: 0px;
-    transition: 1s;
-}
-.accesories-menu.active{
-    position: absolute;
-    left: 620px;
-    top: 83px;
-    width: 200px;
-    height: 200px;
-    background-color: red;
-    transition: 1s;
-}
-}
-
-
-#underwater{
-   .item{
-    position: relative;
-    .text{
-        position: absolute;
-        bottom: 200px;
-        right: -610px;
-        h2{
-            font-size: 35px;
-            color: rgb(233, 233, 233);
+  @media screen and (min-width: 391px) and (max-width: 821px) {
+    .item.slider_2 {
+      .sliderContent {
+        top: 50px;
+        .title {
+          font-size: 22px;
         }
-        h1{
-            font-size: 78px;
-            color: white;
+        h1 {
+          font-size: 26px;
+          margin-top: 20px;
         }
-        p{
-            font-size: 18px;
-            color: white;
+        .shopnow {
+          padding-left: 15px;
+          padding-right: 15px;
         }
-        .btn{
-            width: 170px;
-            background-color: rgb(201, 13, 13);
-            color: white;
-            border-radius: 15px;
+        .text {
+          font-size: 14px;
+          width: 50%;
         }
+      }
     }
-  
-   }
- 
+  }
+}
+
+#ImportInfo {
+  margin-top: 20px;
+  .animeIcon {
+    .image {
+      padding: 8px 0;
+      display: flex;
+      justify-content: center;
+
+      img {
+        transition: 0.6s;
+      }
+      &:hover img {
+        transform: rotateY(360deg);
+      }
+    }
+
+    .title-text {
+      text-align: center;
+      p {
+        color: gray;
+      }
+    }
+  }
+  @media screen and (max-width: 391px) {
+    .animeIcon {
+      display: flex;
+      .title-text {
+        margin-left: 20px;
+        text-align: left;
+      }
+      .image {
+        width: 60px;
+        height: 60px;
+        padding: 8px 0;
+        display: flex;
+        justify-content: center;
+
+        img {
+          width: 100%;
+          height: 100%;
+          transition: 0.6s;
+        }
+      }
+    }
+  }
 }
