--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -157,209 +157,382 @@ header {
       }
     }
   }
-}
 
-.mobile-container {
-  background-color: white;
-  .row {
-    .user-cart {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .search_input {
-      overflow: hidden;
-      visibility: hidden;
-      opacity: 0;
-      position: absolute;
-      top: 30px;
-      left: 50px;
-      transition: 0.3s all;
-      .icon_search {
+  .mobile-container {
+    background-color: white;
+    .row {
+      .user-cart {
+       text-align: end;
+      }
+      .search_input {
+        overflow: hidden;
+        visibility: hidden;
+        opacity: 0;
         position: absolute;
-        top: 0px;
-        right: 3px;
-      }
-    }
-    .search_input.active {
-      visibility: visible;
-      opacity: 1;
-    }
-    .user_mobile_registration {
-      top: 3%;
-      right: 0;
-      visibility: hidden;
-      opacity: 0;
-      position: absolute;
-      height: max-content;
-      background-color: rgb(255, 255, 255);
-      padding: 0px 30px;
-      transition: 0.3s all;
-      .language {
-        line-height: 0;
-        .image {
-          margin-bottom: 10px;
+        top: 30px;
+        left: 50px;
+        transition: 0.3s all;
+        .icon_search {
+          position: absolute;
+          top: 0px;
+          right: 3px;
         }
       }
-    }
-    .user_mobile_registration.active {
-      visibility: visible;
-      opacity: 1;
+      .search_input.active {
+        visibility: visible;
+        opacity: 1;
+      }
+      .user_mobile_registration {
+        text-align: start;
+        top: 3%;
+        right: 0;
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        height: max-content;
+        background-color: rgb(255, 255, 255);
+        padding: 0px 30px;
+        transition: 0.3s all;
+        .language {
+          line-height: 0;
+          .image {
+            margin-bottom: 10px;
+          }
+        }
+      }
+      .user_mobile_registration.active {
+        visibility: visible;
+        opacity: 1;
+      }
     }
   }
-}
-
-.mobile-menu {
-  overflow: hidden;
-  position: relative;
-  top: -34px;
-  background-color: rgb(255, 255, 255);
-  width: 0px;
-  height: 100vh;
-  transition: 1s;
-  ul {
-    padding: 10px;
-    li {
+  .mobile-menu {
+    overflow: hidden;
+    position: relative;
+    top: -34px;
+    background-color: rgb(255, 255, 255);
+    width: 0px;
+    height: 100vh;
+    transition: 1s;
+    ul {
       padding: 10px;
-      a {
-        color: black;
-        i.active {
-          transform: rotate(180deg);
+      li {
+        padding: 10px;
+        a {
+          color: black;
+          i.active {
+            transform: rotate(180deg);
+          }
         }
       }
-    }
-    .acs-icon {
-      display: none;
-    }
-    .acs-icon.active {
-      display: block;
-    }
-    .drone-icon {
-      display: none;
-    }
-    .drone-icon.active {
-      display: block;
+      .acs-icon {
+        display: none;
+      }
+      .acs-icon.active {
+        display: block;
+      }
+      .drone-icon {
+        display: none;
+      }
+      .drone-icon.active {
+        display: block;
+      }
     }
   }
-}
 
-.mobile-menu.active {
-  position: relative;
-  width: 200px;
-  height: 100vh;
-  top: -34px;
-  background-color: rgb(255, 255, 255);
-  transition: 1s;
-}
-
-#underwater {
-  .item.slider_2 {
+  .mobile-menu.active {
     position: relative;
-    .sliderContent {
+    width: 200px;
+    height: 100vh;
+    top: -34px;
+    background-color: rgb(255, 255, 255);
+    transition: 1s;
+  }
+}
+
+#base {
+  @media screen and (max-width: 391px) {
+    & {
+      top: 70px;
+    }
+  }
+
+  &:hover {
+    .right {
+      opacity: 1;
+    }
+
+    .left {
+      opacity: 1;
+    }
+  }
+
+  .right {
+    cursor: pointer;
+    width: 33px;
+    height: 33px;
+    padding: 4px 10px;
+    position: absolute;
+    top: 300px;
+    right: 25px;
+    z-index: 2;
+    background-color: #eb4d4b;
+    transition: 0.3s;
+    opacity: 0;
+
+    &:hover {
+      background-color: #333;
+    }
+
+    i {
+      color: white;
+    }
+  }
+
+  .left {
+    cursor: pointer;
+    width: 33px;
+    height: 33px;
+    padding: 4px 10px;
+    position: absolute;
+    top: 300px;
+    left: 25px;
+    z-index: 2;
+    background-color: #eb4d4b;
+    transition: 0.3s;
+    opacity: 0;
+
+    &:hover {
+      background-color: #333;
+    }
+
+    i {
+      color: white;
+    }
+  }
+
+  .fastDrone {
+    position: relative;
+
+    .droneImage {
       position: absolute;
-      top: 170px;
-      left: 6%;
-      color: #fff;
-      line-height: 30px;
-      .title {
-        font-size: 34px;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-      }
-      h1 {
-        font-size: 60px;
-        margin-top: 30px;
-      }
-      .shopnow {
-        padding-left: 35px;
-        padding-right: 35px;
-        border-radius: 25px;
-        &:hover {
-          background-color: black;
-          color: white;
-          border: 1px solid black;
+      width: 100%;
+      cursor: pointer;
+
+      img {
+        width: 100%;
+
+        @media screen and (max-width: 391px) {
+          & {
+            content: url("../images/ResponsiveDrone1.png");
+            width: 100%;
+          }
         }
       }
     }
-  }
-  .item.slider_1 {
-    position: relative;
-    .sliderContent {
+
+    .droneInfo {
+      cursor: pointer;
       position: absolute;
-      top: 170px;
-      left: 50%;
-      color: #fff;
-      line-height: 30px;
-      .title {
-        font-size: 34px;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+      top: 40px;
+      left: 120px;
+      width: 50%;
+      color: white;
+      overflow: hidden;
+
+      @media screen and (max-width: 391px) {
+        & {
+          width: 100%;
+          position: absolute;
+          top: 180px;
+          left: 0;
+          text-align: center;
+        }
       }
-      h1 {
-        font-size: 66px;
-        margin-top: 30px;
-        font-family: Georgia, "Times New Roman", Times, serif;
+
+      .title-text {
+        width: 80%;
+
+        @media screen and (max-width: 391px) {
+          & {
+            width: 100%;
+          }
+        }
+
+        @media screen and (max-width: 821px) {
+          & {
+            padding-top: 20px;
+          }
+        }
+
+        h2 {
+          @media screen and (max-width: 391px) {
+            & {
+              font-size: 18px;
+            }
+          }
+        }
+
+        h1 {
+          padding: 8px 0;
+          font-size: 75px;
+
+          @media screen and (max-width: 821px) {
+            & {
+              font-size: 35px;
+            }
+          }
+
+          @media screen and (max-width: 391px) {
+            & {
+              font-size: 18px;
+            }
+          }
+        }
+
+        p {
+          @media screen and (max-width: 391px) {
+            & {
+              display: none;
+            }
+          }
+        }
       }
-      .shopnow {
-        padding-left: 35px;
-        padding-right: 35px;
-        border-radius: 25px;
+    }
+
+    .droneButton {
+      button {
+        border-radius: 20px;
+        color: white;
+        border: none;
+
+        @media screen and (max-width: 391px) {
+          & {
+            font-size: 10px;
+            margin-bottom: 30px;
+          }
+        }
+
+        background-color: #eb4d4b;
+
         &:hover {
-          background-color: black;
-          color: white;
-          border: 1px solid black;
+          background-color: #333;
         }
       }
     }
   }
 
-  @media screen and (min-width: 391px) and (max-width: 821px) {
-    .item.slider_1 {
-      .sliderContent {
-        top: 50px;
-        .title {
-          font-size: 22px;
-        }
-        h1 {
-          font-size: 26px;
-          margin-top: 20px;
-        }
-        .shopnow {
-          padding-left: 15px;
-          padding-right: 15px;
-        }
-        .text {
-          font-size: 14px;
+  .underwaterDrone {
+    position: relative;
+
+    .droneImage {
+      cursor: pointer;
+
+      img {
+        width: 100%;
+
+        @media screen and (max-width: 391px) {
+          & {
+            content: url("../images/ResponsiveDrone2.png");
+            width: 100%;
+          }
         }
       }
     }
-  }
-  @media screen and (min-width: 391px) and (max-width: 821px) {
-    .item.slider_2 {
-      .sliderContent {
-        top: 50px;
-        .title {
-          font-size: 22px;
+
+    .droneInfo {
+      cursor: pointer;
+      position: absolute;
+      top: 50px;
+      right: 0;
+      width: 50%;
+      color: white;
+      overflow: hidden;
+
+      @media screen and (max-width: 391px) {
+        & {
+          width: 100%;
+          position: absolute;
+          top: 180px;
+          text-align: center;
         }
+      }
+
+      .title-text {
+        width: 70%;
+
+        @media screen and (max-width: 391px) {
+          & {
+            width: 100%;
+          }
+        }
+
+        @media screen and (max-width: 821px) {
+          & {
+            padding-top: 18px;
+          }
+        }
+
+        h2 {
+          @media screen and (max-width: 391px) {
+            & {
+              font-size: 18px;
+            }
+          }
+        }
+
         h1 {
-          font-size: 26px;
-          margin-top: 20px;
+          padding: 8px 0;
+          font-size: 60px;
+
+          @media screen and (max-width: 821px) {
+            & {
+              font-size: 28px;
+            }
+          }
+
+          @media screen and (max-width: 391px) {
+            & {
+              font-size: 22px;
+            }
+          }
         }
-        .shopnow {
-          padding-left: 15px;
-          padding-right: 15px;
+
+        p {
+          @media screen and (max-width: 391px) {
+            & {
+              display: none;
+            }
+          }
         }
-        .text {
-          font-size: 14px;
-          width: 50%;
+      }
+    }
+
+    .droneButton {
+      button {
+        border-radius: 20px;
+        color: white;
+        border: none;
+
+        @media screen and (max-width: 391px) {
+          & {
+            font-size: 10px;
+            margin-bottom: 30px;
+          }
+        }
+
+        background-color: #eb4d4b;
+
+        &:hover {
+          background-color: #333;
         }
       }
     }
   }
 }
-
 #ImportInfo {
   .animeIcon {
     .image {
-      padding: 8px 0;
       display: flex;
       justify-content: center;
 
@@ -403,7 +576,13 @@ header {
 }
 
 #About {
-  padding: 45px;
+  padding: 48px;
+  .image {
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
   .about {
     .title {
       font-size: 16px;
@@ -442,18 +621,240 @@ header {
       letter-spacing: 0.5px;
       line-height: 24px;
     }
-    ::marker{
+    ::marker {
       color: red;
     }
-    .view_more{
+    .view_more {
       margin-top: 18px;
       padding-left: 18px;
       padding-right: 18px;
-      border-radius :20px;
-      &:hover{
+      border-radius: 20px;
+      &:hover {
         background-color: black;
         border: 1px solid black;
       }
+    }
+  }
+}
+
+#products {
+  background-image: url(../images/testimonialbackground.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 48px;
+  .title {
+    .subtitle {
+      font-size: 26px;
+      margin: 0;
+      margin-bottom: 12px;
+      color: #eb4d4b;
+    }
+    .home {
+      font-size: 34px;
+      position: relative;
+      .home-title:before {
+        position: absolute;
+        content: "";
+        width: 80px;
+        height: 4px;
+        background: #eb4d4b;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 20px;
+      }
+    }
+  }
+
+  .item {
+    display: flex;
+    justify-content: center;
+    .detail {
+      position: relative;
+      text-align: left;
+      background: #fff;
+      padding: 65px 50px 40px;
+      margin-top: 60px;
+      .image {
+        max-width: 100px;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 5px solid #eb4d4b;
+        margin: 0 auto;
+        padding: 0;
+        text-align: center;
+        position: absolute;
+        top: -60px;
+        left: 50px;
+      }
+    }
+    .user_description {
+      margin-bottom: 15px;
+      line-height: 24px;
+      font-weight: 400;
+      font-size: 14px;
+      letter-spacing: 0.5px;
+      color: #666;
+    }
+    .user_detail {
+      .user_name {
+        position: relative;
+        display: inline-block;
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 500;
+        color: #232323;
+      }
+      .user_designation {
+        font-size: 14px;
+        font-weight: 400;
+        padding-left: 6px;
+        letter-spacing: 0.5px;
+        color: #eb4d4b;
+        display: inline-block;
+      }
+    }
+  }
+}
+
+#latest {
+  .title {
+    .subtitle {
+      font-size: 26px;
+      margin: 0;
+      margin-bottom: 12px;
+      color: #eb4d4b;
+    }
+    .home {
+      font-size: 34px;
+      position: relative;
+      .home-title:before {
+        position: absolute;
+        content: "";
+        width: 80px;
+        height: 4px;
+        background: #eb4d4b;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 20px;
+      }
+    }
+  }
+  .latest_ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .latest_ul_li {
+      border: 1px solid rgb(238, 235, 235);
+      padding: 5px;
+      margin: 1px;
+      display: inline-block;
+      &:hover {
+        background-color: #f3ebeb;
+      }
+      a {
+        padding: 20px;
+      }
+    }
+  }
+  .device {
+    margin-bottom: 110px;
+    padding: 11px;
+    height: 400px;
+    position: relative;
+    .image {
+      height: 100%;
+      position: relative;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+
+      .first {
+        position: absolute;
+        opacity: 1;
+        transition: 1s all;
+      }
+      .second {
+        position: absolute;
+        opacity: 0;
+        transition: 1s all;
+      }
+      &:hover {
+        .first {
+          opacity: 0;
+        }
+        .second {
+          opacity: 1;
+        }
+      }
+      cursor: pointer;
+    }
+    .rating {
+      position: absolute;
+      color: rgb(230, 255, 5);
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .buttons {
+      position: absolute;
+      left: auto;
+      right: 16px;
+      top: 10px;
+      display: block;
+      .allbutton {
+        border: 1px solid black;
+        padding: 6px;
+        border-radius: 50%;
+        margin-top: 5px;
+        opacity: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s all;
+        cursor: pointer;
+      }
+    }
+    .allbutton.active {
+      opacity: 1;
+    }
+  }
+  .caption {
+    padding: 10px;
+    .add_cart {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #eb4d4b;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%);
+      bottom: -62px;
+      transition: 0.5s all;
+      overflow: hidden;
+      opacity: 0;
+      height: 35px;
+      width: 120px;
+      cursor: pointer;
+    }
+    .add_cart.active {
+      opacity: 1;
+    }
+    .description {
+      margin-bottom: 10px;
+    }
+    .price {
+      color: #eb4d4b;
+      font-size: 16px;
+      margin-bottom: 5px;
+      transition: all 0.4s;
+      opacity: 1;
     }
   }
 }
