--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,14 +89,14 @@ header .big-size-container .row nav ul li .drone-menu .menu ul li:hover {
 header .big-size-container .row nav ul li .drone-menu.active {
   visibility: visible;
 }
-header .big-size-container .row .icons i {
+header .big-size-container .row .icons .icon {
   color: white;
   font-size: 26px;
   margin-left: 20px;
   transition: 0.5s;
   cursor: pointer;
 }
-header .big-size-container .row .icons i:hover {
+header .big-size-container .row .icons .icon:hover {
   color: black;
   transition: 0.5s;
 }
@@ -111,6 +111,51 @@ header .big-size-container .row .icons .count {
   position: relative;
   right: 9px;
   bottom: 10px;
+}
+header .big-size-container .row .icons .box {
+  height: 300px;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 75px;
+  right: 0;
+  margin: 0 auto;
+  background-color: white;
+  overflow-y: scroll;
+  transition: 1s;
+  z-index: 1;
+}
+header .big-size-container .row .icons .box .box_device li {
+  border-bottom: 1px solid black;
+  padding: 15px;
+  display: flex;
+  list-style: none;
+}
+header .big-size-container .row .icons .box .box_device li .cart_image {
+  width: 90px;
+  height: 120px;
+  border-right: 1px solid black;
+}
+header .big-size-container .row .icons .box .box_device li .cart_image img {
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+header .big-size-container .row .icons .box .box_device li .info {
+  padding: 20px;
+  margin-left: 25px;
+}
+header .big-size-container .row .icons .box .box_device li .exitbutton {
+  position: absolute;
+  right: 12px;
+  font-size: 13px;
+  cursor: pointer;
+}
+header .big-size-container .row .icons .box.active {
+  visibility: visible;
+  opacity: 1;
 }
 header .big-size-container .row .search_input_large {
   visibility: hidden;
