--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -94,7 +94,7 @@ header {
         }
       }
       .icons {
-        i {
+        .icon {
           color: white;
           font-size: 26px;
           margin-left: 20px;
@@ -116,6 +116,52 @@ header {
           position: relative;
           right: 9px;
           bottom: 10px;
+        }
+        .box {
+          height: 300px;
+          visibility: hidden;
+          opacity: 0;
+          position: absolute;
+          top: 75px;
+          right: 0;
+          margin: 0 auto;
+          background-color: white;
+          overflow-y: scroll;
+          transition: 1s;
+          z-index: 1;
+          .box_device {
+            li {
+              border-bottom: 1px solid black;
+              padding: 15px;
+              display: flex;
+              list-style: none;
+              .cart_image {
+                width: 90px;
+                height: 120px;
+                border-right: 1px solid black;
+                img {
+                  padding: 10px;
+                  width: 100%;
+                  height: 100%;
+                  object-fit: contain;
+                }
+              }
+              .info {
+                padding: 20px;
+                margin-left: 25px;
+              }
+              .exitbutton {
+                position: absolute;
+                right: 12px;
+                font-size: 13px;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+        .box.active{
+          visibility: visible;
+          opacity: 1;
         }
       }
       .search_input_large {
