--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,16 @@
 }
 
 header {
+  background-color: #47b8f4;
   width: 100%;
-  position: absolute;
+  position: sticky;
+  top: 0;
+  bottom: 0;
   z-index: 100;
+  transition: 0.5s all;
 }
 header .big-size-container {
-  margin-top: 20px;
-  height: 70px;
+  height: 50px;
 }
 header .big-size-container .row .logo {
   display: flex;
@@ -153,11 +156,19 @@ header .big-size-container .row .icons .box .box_device li .exitbutton {
   font-size: 13px;
   cursor: pointer;
 }
-header .big-size-container .row .icons .box.active {
+header .big-size-container .row .icons .box .cart_button_x {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 0 15px;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 5px;
+}
+header .big-size-container .row .box.active {
   visibility: visible;
   opacity: 1;
 }
-header .big-size-container .row .search_input_large {
+header .big-size-container .search_input_large {
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -165,16 +176,16 @@ header .big-size-container .row .search_input_large {
   right: 5%;
   transition: 0.3s all;
 }
-header .big-size-container .row .search_input_large .icon_search {
+header .big-size-container .search_input_large .icon_search {
   position: absolute;
   top: 0px;
   right: 3px;
 }
-header .big-size-container .row .search_input_large.active {
+header .big-size-container .search_input_large.active {
   visibility: visible;
   opacity: 1;
 }
-header .big-size-container .row .user_registration {
+header .big-size-container .user_registration {
   right: 8%;
   visibility: hidden;
   opacity: 0;
@@ -185,20 +196,21 @@ header .big-size-container .row .user_registration {
   padding: 0px 30px;
   transition: 0.3s all;
 }
-header .big-size-container .row .user_registration .language {
+header .big-size-container .user_registration .language {
   line-height: 0;
 }
-header .big-size-container .row .user_registration .language .image {
+header .big-size-container .user_registration .language .image {
   margin-bottom: 10px;
 }
-header .big-size-container .row .user_registration.active {
+header .big-size-container .user_registration.active {
   visibility: visible;
   opacity: 1;
 }
-header .mobile-container {
+
+.mobile-container {
   background-color: white;
 }
-header .mobile-container .row .search_input {
+.mobile-container .row .search_input {
   overflow: hidden;
   visibility: hidden;
   opacity: 0;
@@ -207,16 +219,16 @@ header .mobile-container .row .search_input {
   left: 50px;
   transition: 0.3s all;
 }
-header .mobile-container .row .search_input .icon_search {
+.mobile-container .row .search_input .icon_search {
   position: absolute;
   top: 0px;
   right: 3px;
 }
-header .mobile-container .row .search_input.active {
+.mobile-container .row .search_input.active {
   visibility: visible;
   opacity: 1;
 }
-header .mobile-container .row .user_mobile_registration {
+.mobile-container .row .user_mobile_registration {
   text-align: start;
   top: 3%;
   right: 0;
@@ -229,17 +241,18 @@ header .mobile-container .row .user_mobile_registration {
   padding: 0px 30px;
   transition: 0.3s all;
 }
-header .mobile-container .row .user_mobile_registration .language {
+.mobile-container .row .user_mobile_registration .language {
   line-height: 0;
 }
-header .mobile-container .row .user_mobile_registration .language .image {
+.mobile-container .row .user_mobile_registration .language .image {
   margin-bottom: 10px;
 }
-header .mobile-container .row .user_mobile_registration.active {
+.mobile-container .row .user_mobile_registration.active {
   visibility: visible;
   opacity: 1;
 }
-header .mobile-menu {
+
+.mobile-menu {
   overflow: hidden;
   position: relative;
   top: -34px;
@@ -248,37 +261,59 @@ header .mobile-menu {
   height: 100vh;
   transition: 1s;
 }
-header .mobile-menu ul {
+.mobile-menu ul {
   padding: 10px;
 }
-header .mobile-menu ul li {
+.mobile-menu ul li {
   padding: 10px;
 }
-header .mobile-menu ul li a {
+.mobile-menu ul li a {
   color: black;
 }
-header .mobile-menu ul li a i.active {
+.mobile-menu ul li a i.active {
   transform: rotate(180deg);
 }
-header .mobile-menu ul .acs-icon {
+.mobile-menu ul .acs-icon {
   display: none;
 }
-header .mobile-menu ul .acs-icon.active {
+.mobile-menu ul .acs-icon.active {
   display: block;
 }
-header .mobile-menu ul .drone-icon {
+.mobile-menu ul .drone-icon {
   display: none;
 }
-header .mobile-menu ul .drone-icon.active {
+.mobile-menu ul .drone-icon.active {
   display: block;
 }
-header .mobile-menu.active {
+
+.mobile-menu.active {
   position: relative;
   width: 200px;
   height: 100vh;
   top: -34px;
   background-color: rgb(255, 255, 255);
   transition: 1s;
+}
+
+.ac {
+  background-color: white;
+  color: black;
+  transition: 0.5s all;
+}
+.ac .big-size-container .row ul li a {
+  color: black;
+}
+.ac .big-size-container .row ul li a:hover {
+  color: #1d1b1b;
+}
+.ac .big-size-container .row .icons .icon {
+  color: black;
+}
+.ac .big-size-container .row .icons .icon:hover {
+  color: rgb(58, 56, 56);
+}
+.ac .big-size-container .row .icons .count {
+  color: rgb(53, 52, 52);
 }
 
 @media screen and (max-width: 391px) {
